Added recent papers and new lab members

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,6 +46,12 @@
 	body {
 		-webkit-text-size-adjust: none;
 	}
+	em {
+  		font-style: italic;
+	}
+	strong {
+  		font-weight: bold;
+	}
 
 /* Box Model */
 
