--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -90,6 +90,20 @@
 		width: 960px;
 	}
 
+
+
+@media screen and (min-width: 801px) {
+
+  #witech { float: right; width:400px; }
+}
+
+@media screen and (max-width: 800px) {
+
+  #witech { float: none; width:400px; }
+}
+
+
+
 	@media screen and (min-width: 737px) {
 
 		.container.\31 25\25 {
@@ -1759,6 +1773,9 @@
 				box-shadow: inset 0px -20px 70px 0px rgba(200, 220, 245, 0.1), inset 0px -1px 0px 0px rgba(255, 255, 255, 0.1), 0px 1px 7px 0px rgba(0, 0, 0, 0.6);
 				text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.75);
 			}
+
+
+
 
 				#titleBar .title {
 					display: block;
